# libzip-plus-plus

./: .hg_archival.txt  CMakeLists.txt  INSTALL.md  README.md  zippy.hpp
doc/: mainpage.cpp
test/: main.cpp
